<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">jEnglishPlayer</string>
    <string name="main_btn_play">Play</string>
    <string name="main_btn_pause">Pause</string>
    <string name="main_btn_stop">Stop</string>
    <string name="main_btn_next">Next</string>
    <string name="main_btn_sleep_set">Set sleep timer</string>
    <string name="main_btn_sleep_clear">Sleeping (Clear sleep timer)</string>
    <string name="main_cb_looping_mode">Repeat mode</string>
    <string name="main_menu_settings">Settings</string>
    <string name="main_menu_about">About</string>
    <string name="main_menu_exit">Exit</string>
    <string name="about_activity_title">About jEnglishPlayer</string>
    <string name="about_author">Author: Johnson Lau</string>
    <string name="about_email">Email: gatement@gmail.com</string>
    <string name="about_back">Back</string>
    <string name="settings_activity_title">Settings</string>
    <string name="settings_sound_url">Sound Url</string>
    <string name="settings_confirm">Save</string>
</resources>