<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/main_msg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    <Button
        android:id="@+id/main_play"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="#d5f0fa"
        android:text="@string/main_btn_play" />

    <Button
        android:id="@+id/main_pause"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="#d5f0fa"
        android:text="@string/main_btn_pause" />

    <Button
        android:id="@+id/main_stop"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="#d5f0fa"
        android:text="@string/main_btn_stop" />

    <Button
        android:id="@+id/main_next"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="#d5f0fa"
        android:text="@string/main_btn_next" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/main_sleep_time"
            android:layout_width="100dp"
            android:layout_height="58dp"
            android:inputType="number" />

        <Button
            android:id="@+id/main_btn_sleep"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="#dbd7fe"
            android:text="@string/main_btn_sleep_set" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/main_cb_looping_mode"
        android:layout_width="fill_parent"
        android:layout_height="58dp"
        android:text="@string/main_cb_looping_mode" />

</LinearLayout>